--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -32,7 +32,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'tasks:tasks_index' %}">Задачи</a>
                         </li>
-                    </ul>
+                        <ul class="navbar-nav">
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'main:login' %}">Вход</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'users:user_create' %}">Регистрация</a>
+                            </li>
+                        </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <form action="{% url 'main:logout' %}" method="post">
