--- a/main/templates/main/form.html
+++ b/main/templates/main/form.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% load django_bootstrap5 %}
+
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">{{ title }}</h1>
