--- a/users/templates/users/users_index.html
+++ b/users/templates/users/users_index.html
@@ -1,29 +1,35 @@
 {% extends "layout.html" %}
 
-{% block title %}Home page{% endblock %}
+{% block title %}Users{% endblock %}
 
 {% block content %}
-<div class="container-lg my-4">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-10 col-lg-8">
-      <div class="border rounded-3 bg-light p-5">
-        <h1 class="display-3">Привет!</h1>
-        <p class="lead">Task manager поможет с организацией и распределением задач</p>
-
-        <form method="post" class="row g-3 align-items-center">
-          {% csrf_token %}
-          <div class="col-12 col-md-8">
-            <input type="text" name="url" class="form-control form-control-lg"
-                   placeholder="https://www.example.com" aria-label="Ссылка на сайт" required>
-          </div>
-          <div class="col-12 col-md-4">
-            <button type="submit" class="btn btn-primary btn-lg w-100 text-uppercase">
-              Проверить
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+<div class="container wrapper flex-grow-1">
+  <h1 class="my-4">Пользователи</h1>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Имя пользователя</th>
+        <th>Полное имя</th>
+        <th>Дата создания</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for user in users %}
+      <tr>
+          <td>{{ user.id }}</td>
+          <td>{{ user.username }}</td>
+          <td>{{ user.first_name }} {{ user.last_name }}</td>
+          <td>{{ user.date_joined|date:"d.m.Y. H:i" }}</td>
+          <td>
+            <a href="{% url 'users:user_update' user.id %}">Изменить</a>
+            <br>
+            <a href="{% url 'users:user_delete' user.id %}">Удалить</a>
+          </td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 </div>
 {% endblock %}
