--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load django_bootstrap5 %}
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,34 +20,40 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- Всегда видимые ссылки -->
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'users:users_index' %}">Пользователи</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'statuses:statuses_index' %}">Статусы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'labels:labels_index' %}">Метки</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'tasks:tasks_index' %}">Задачи</a>
-                        </li>
-                        <ul class="navbar-nav">
 
+                        <!-- Только для авторизованных пользователей -->
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'statuses:statuses_index' %}">Статусы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'labels:labels_index' %}">Метки</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'tasks:tasks_index' %}">Задачи</a>
+                            </li>
+                            <li class="nav-item">
+                                <form action="{% url 'main:logout' %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link nav-link">Выход</button>
+                                </form>
+                            </li>
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        <!-- Показываем для неавторизованных -->
+                        {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'main:login' %}">Вход</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'users:user_create' %}">Регистрация</a>
                             </li>
-                        </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <form action="{% url 'main:logout' %}" method="post">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-link nav-link">Выход</button>
-                            </form>
-                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -57,7 +63,7 @@
     <main class="container flex-grow-1 mt-3">
         {% bootstrap_messages %}
         <div id="content">
-            <h1 class="my-4"></h1>
+            <h1 class="my-4">{% block header %}{% endblock %}</h1>
             {% block content %}{% endblock %}
         </div>
     </main>
