--- a/main/templates/main/form.html
+++ b/main/templates/main/form.html
@@ -2,6 +2,8 @@
 
 {% load django_bootstrap5 %}
 
+{% block title %}{{ page_title }}{% endblock %}
+
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">{{ title }}</h1>
