--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,20 +1,35 @@
 {% extends "layout.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block title %}Login{% endblock %}
 
 {% block content %}
 
-
-
-        <form id="contact_form" action="{% url 'main:login' %}" method="post">
-          {% load django_bootstrap5 %}
-          {% csrf_token %}
-          {% bootstrap_form login_form %}
-          {% buttons %}
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Войти</button>
-          </div>
-          {% endbuttons %}
-        </form>
+  <form action="{% url 'main:login' %}" method="post">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% bootstrap_button button_type="submit" content="Войти" %}
+  </form>
 
 {% endblock %}
+
+
+{% extends "layout.html" %}
+
+{% block content %}
+<div class="container wrapper flex-grow-1">
+<h1 class="my-4">Вход</h1>
+<form action="{% url 'login' %}" method="post">
+    {% csrf_token %}
+    <div class="mb-3"><label class="form-label" for="id_username">Имя пользователя</label>
+        <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" required id="id_username">
+    </div>
+    <div class="mb-3"><label class="form-label" for="id_password">Пароль</label>
+        <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="Пароль" required id="id_password">
+    </div>
+    <input class="btn btn-primary" type="submit" value="Войти">
+</form>
+</div>
+{% endblock content %}
+
