--- a/users/templates/users/user_delete.html
+++ b/users/templates/users/user_delete.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 
-{% block title %}Statuses{% endblock %}
+{% load django_bootstrap5 %}
+
+{% block title %}Delete User{% endblock %}
 
 {% block content %}
-<h1>del</h1>
+<h1 class="my-4">Удаление пользователя</h1>
+<p>Вы уверены, что хотите удалить {{ user.first_name }} {{ user.last_name }}?</p>
+<form method="post">
+  {% csrf_token %}
+  {% bootstrap_button button_class="btn btn-danger" button_type="submit" content="Да, удалить" %}
+</form>
 {% endblock %}
