--- a/tasks/templates/tasks/delete_task.html
+++ b/tasks/templates/tasks/delete_task.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">{{ title }}</h1>
-    <p>Вы уверены, что хотите удалить {{ model }}?</p>
+    <p>Вы уверены, что хотите удалить {{ task.name }}?</p>
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
