--- a/tasks/templates/tasks/tasks_index.html
+++ b/tasks/templates/tasks/tasks_index.html
@@ -1,7 +1,54 @@
 {% extends "layout.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-<h1>Some tasks</h1>
+<div class="container wrapper flex-grow-1">
+  <h1 class="my-4">Задачи</h1>
+  <a class="btn btn-primary mb-3" href="{% url 'tasks:task_create' %}">Создать задачу</a>
+
+  <div class="card mb-4">
+      <div class="card-body">
+          <form method="get" class="row g-3">
+              {% bootstrap_form filter.form layout='horizontal' size='sm' horizontal_label_class='col-md-2' field_class='col-md-4' %}
+              <div class="col-12">
+                  {% bootstrap_button "Применить фильтр" button_type="submit" button_class="btn btn-primary" %}
+              </div>
+          </form>
+      </div>
+  </div>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Статус</th>
+        <th>Автор</th>
+        <th>Исполнитель</th>
+        <th>Дата создания</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for status in statuses %}
+      <tr>
+          <td>{{ status.id }}</td>
+          <td>{{ status.name }}</td>
+          <td>{{ status.status }}</td>
+          <td>{{ status.author }}</td>
+          <td>{{ status.performer }}</td>
+          <td>{{ status.created_at|date:"d.m.Y H:i" }}</td>
+          <td>
+            <a href="{% url 'tasks:task_update' tasks.id %}">Изменить</a>
+            <br>
+            <a href="{% url 'tasks:task_delete' tasks.id %}">Удалить</a>
+          </td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
