--- a/tasks/templates/tasks/task_details.html
+++ b/tasks/templates/tasks/task_details.html
@@ -1,4 +1,4 @@
-{% extends "../layout.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
 <div class="container wrapper flex-grow-1">
@@ -17,7 +17,7 @@
     </div>
     <div class="row p-1">
       <div class="col">Исполнитель</div>
-      <div class="col">{{ task.executor }}</div>
+      <div class="col">{{ task.performer }}</div>
     </div>
     <div class="row p-1">
       <div class="col">Статус</div>
@@ -30,9 +30,9 @@
     <div class="row p-1">
       <div class="col">
         <h6>Метки:</h6>
-        {% if task.label %}
+        {% if task.labels %}
         <ul>
-            {% for label in task.label.all %}
+            {% for label in task.labels.all %}
             <li>{{ label.name }}</li>
             {% endfor %}
         </ul>
@@ -41,9 +41,9 @@
     </div>
     <div class="row p-1">
       <div class="col">
-        <a href="{% url 'task_update' task.id %}">Изменить</a>
+        <a href="{% url 'tasks:task_update' task.id %}">Изменить</a>
         <br>
-        <a href="{% url 'task_delete' task.id %}">Удалить</a>
+        <a href="{% url 'tasks:task_delete' task.id %}">Удалить</a>
       </div>
     </div>
   </div>
