Stage 8.2.1 refactor: change performer in model.Task to executor

--- a/task_manager/tasks/templates/tasks/tasks_index.html
+++ b/task_manager/tasks/templates/tasks/tasks_index.html
@@ -50,7 +50,7 @@
       <td><a href="{% url 'tasks:task_details' obj.id %}">{{ obj.name }}</a></td>
       <td>{{ obj.status }}</td>
       <td>{{ obj.author }}</td>
-      <td>{{ obj.performer }}</td>
+      <td>{{ obj.executor }}</td>
       <td>{{ obj.created_at|date:"d.m.Y H:i" }}</td>
       <td>
         <a href="{% url 'tasks:task_update' obj.id %}">Изменить</a>
