--- a/task_manager/tasks/templates/tasks/task_details.html
+++ b/task_manager/tasks/templates/tasks/task_details.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row p-1">
       <div class="col">Исполнитель</div>
-      <div class="col">{{ task.performer }}</div>
+      <div class="col">{{ task.executor }}</div>
     </div>
     <div class="row p-1">
       <div class="col">Статус</div>
